--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ POSTGRESQL_SECONDARY_HOST = localhost
 POSTGRESQL_PORT = 5432
 POSTGRESQL_DATABASE_NAME = ibpg
 POSTGRESQL_USERNAME = postgres
-POSTGRESQL_PASSWORD = password
+POSTGRESQL_PASSWORD = 
 
-ORACLE_DB_PRIMARY_HOST = 10.22.103.79
-ORACLE_DB_SECONDARY_HOST = 10.22.103.79
+ORACLE_DB_PRIMARY_HOST = localhost
+ORACLE_DB_SECONDARY_HOST = localhost
 ORACLE_DB_PORT = 1521
 ORACLE_DB_DATABASE_NAME = orcl
-ORACLE_DB_USERNAME = SIMASBANKINGPROD
+ORACLE_DB_USERNAME = testusername
 ORACLE_DB_PASSWORD = 
 
 REDIS_HOST = localhost
